2011-03-29  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Pass models_sofar as reference. RelSat somehow
	resets or does something with its internal data members that I
	could not simply get some data member via get methods.
	* SATSolver.h: Likewise.

2011-03-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Get solutions_sofar via _iSolutionCount.
	* SATSolver.h: Likewise.

2011-03-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Solve and return the number of models.
	* SATSolver.h: Likewise.

2011-03-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Solve with limit of solutions.
	* SATSolver.h: Likewise.

2011-02-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Add some more debug info.

2011-02-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Directly pass learned clauses to wrapper.

2011-02-02  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Add interruption points.

2011-01-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.h: Return learned clauses.

	* RelSatHelper.h: Comment out.

2011-01-25  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* RelSatHelper.h: Add operator>> for ClauseList.

2011-01-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATInstance.h: Support canceling additional clauses added by
	conflicts, partial ass, and input.
	* SATInstance.cpp: Likewise.

2011-01-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Compile with NDEBUG and -O3 by default.

2011-01-22  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATInstance.cpp: Comment out some debugging information.
	* SATSolver.cpp: Likewise.

2011-01-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* SATSolver.cpp: Use DMCS_LOG_TRACE.

2011-01-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* SATSolver.h: Fix warning.

2011-01-19  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* SATSolver.cpp: Add more debugging information. Add methods
	refresh() and clean_up().
	* SATSolver.h: Likewise.
