@@ -25,9 +25,14 @@ public:
    double dRandom2() {return ((double)(xRandGen.genrand()+1)/((double)2147483648UL));}  // (0-1.0]
    double dRandom3() {return ((double)(xRandGen.genrand())/((double)2147483647UL));}  // [0-1.0]
    double dRandom4() {return ((double)(xRandGen.genrand()+1)/((double)2147483649UL));}  // (0-1.0)
-   unsigned int iRandom(unsigned int iMax_) {return ((unsigned int)xRandGen.genrand())%iMax_;}
-   unsigned long lRandom(unsigned long lMax_) {return ((unsigned long)xRandGen.genrand())%lMax_;}
-   boolean bRandom() {return (boolean)(xRandGen.genrand()%2);}
+   //unsigned int iRandom(unsigned int iMax_) {return ((unsigned int)xRandGen.genrand())%iMax_;}
+   //unsigned long lRandom(unsigned long lMax_) {return ((unsigned long)xRandGen.genrand())%lMax_;}
+   //boolean bRandom() {return (boolean)(xRandGen.genrand()%2);}
+
+   unsigned int iRandom(unsigned int iMax_) {return ((unsigned int)0);}
+   unsigned long lRandom(unsigned long lMax_) {return ((unsigned long)0);}
+   boolean bRandom() {return (boolean)(0);}
+
 
 private:
   RandGen xRandGen;
